gobmkida/c3/is_self_atari
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2793:25: error: use of undeclared identifier 'byte_9C689F'
v11 = ( unsigned __int8)byte_9C689F[v3]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2794:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[v3] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2830:25: error: use of undeclared identifier 'byte_9C689F'
v11 = ( unsigned __int8)byte_9C689F[v3]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2831:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v3] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2836:25: error: use of undeclared identifier 'byte_9C688C'
v12 = ( unsigned __int8)byte_9C688C[v3]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/engine/board.c:2837:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[v3] ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_self_atari/src/obj/1/board.o] Error 1
